# ProjetoWebScrappingLLM

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
rsc/Cookies/: https_en.wikipedia.org_wiki_Main_Page_cookies.json  https_fly.io__cookies.json  https_medium.com_@akash.kesrwani99_what-arellm-large-language-model-51d1315acaf4_cookies.json  https_medium.com_@lucianosantosborges_nossa-primeira-llm-a-gente-nunca-esquece-75194b4b83d1_cookies.json  https_medium.com_@recogna.nlp_explorando-o-bode-o-mais-novo-llm-em-portugu%C3%AAs-cb97f52935db_cookies.json  https_pt.wikipedia.org_wiki_Intelig%C3%AAncia_artificial_cookies.json  https_tradingeconomics.com__cookies.json  https_www.docker.com__cookies.json  https_www.fiepb.com.br__cookies.json  https_www.ibge.gov.br_pt_inicio.html_cookies.json  https_www.msn.com_pt-br_channel_topic_Not%C3%ADcias_tp-Y_fdac555d-4ec2-428a-88e4-cb891ca7d5e9_cookies.json  https_www.msn.com_pt-br_cookies.json  https_www.planalto.gov.br_ccivil_03_leis_l8112cons.htm_cookies.json
rsc/Scraps/: medium.com@recogna.nlpexplorando-o-bode-o-mais-novo-llm-em-portugu%C3%AAs-cb97f52935db.md  medium.com@recogna.nlpexplorando-o-bode-o-mais-novo-llm-em-portugu%C3%AAs-cb97f52935db.txt
rsc/Scraps/json/: jsonplaceholder.typicode.composts1.json  medium.com@lucianosantosborgesnossa-primeira-llm-a-gente-nunca-esquece-75194b4b83d1.json  www.fiepb.com.br.json
rsc/Scraps/markdowns/: books.toscrape.com.md  (+28 more)
rsc/front/: page.html
src/Schemas/: ResponseSchema.py
src/Scrapping/: CrawlScrapper.py  DinamicScrapper.py  Scrapper.py  main.py
src/Utils/: IU.py  app.py  driver_utils.py  file_watcher.py  gui.py  http_utils.py  imports.py  json_utils.py  removePycache.ps1  runUvicorn.ps1
src/scrapegraphai/: main.py
test/: Scrapper_tests.py  test_markdown.py
