[tool.poetry]
name = "webscrapping"
version = "0.1.0"
description = "Projeto de WebScrapping utilizando modelo de LLM local"
authors = ["marcovins <marcosbelods@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
python-dotenv = "^1.0.1"
selenium = "^4.27.1"
pytest = "^8.3.4"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
playwright = "^1.49.0"
requests = "^2.32.3"
lxml = "^5.3.0"
jmespath = "^1.0.1"
aiofiles = "^24.1.0"
httpx = "^0.28.1"
pytest-asyncio = "^0.25.0"
regex = "^2024.11.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
